--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -85,7 +85,7 @@
 					</div>
 					<div class="col-md-9 text-right">
 						<strong><small>
-						{{sessionContext.sessionDto.firstName}} / {{sessionContext.sessionDto.userId}} / {{sessionContext.sessionDto.roleId}}
+						{{sessionContext.sessionDto.firstName}} / {{sessionContext.sessionDto.userId}} / {{sessionContext.sessionDto.roleId | capitalizeFilter}}
 						</small></strong>
 					</div>
 				</div>
