--- a/src/main/webapp/modules/ledgers/d.html
+++ b/src/main/webapp/modules/ledgers/d.html
@@ -1,1 +1,49 @@
-comming soon...
+<div class="panel panel-default">
+	<div class="panel-heading text-center">
+		<span class="pull-left">
+			<button	class="btn btn-default"	x-ng-disabled="items.length == 0"
+				x-ng-click="refresh()">
+				<i class="fa fa-refresh"></i>
+			</button>
+		</span>
+		&nbsp;
+	</div>
+	<table class="table table-condensed table-bordered table-striped">
+	<thead>
+	<tr>
+		<th class="text-right" width="60">#</th>
+	   	<th class="text-center" width="80"><small>Id</small></th>
+	   	<th class="text-center"><small>Name</small></th>
+	   	<th class="text-center" width="140"><small>Type</small></th>
+	   	<th class="text-center" width="160"><small>Amount</small></th>
+	   	<th class="text-center" width="180"><small>Employee Id</small></th>
+	   	<th class="text-center" width="40"><small>&nbsp;</small></th>
+	</tr>
+	</thead>
+	<tbody>
+	<tr x-ng-repeat="item in items | orderBy : '-id'">
+		<td class="text-right">
+			{{$index+1}}
+		</td>
+		<td class="text-right">
+			{{item.id}}
+		</td>
+		<td>
+			{{item.name}}
+		</td>
+		<td class="text-center">
+			{{item.type}}
+		</td>
+		<td class="text-right">
+			{{item.amount | number : 2}}
+		</td>
+		<td>
+			{{item.userId}}
+		</td>
+		<td>
+			&nbsp;
+		</td>
+	</tr>
+	</tbody>
+	</table>
+</div>
