updating latest changes...

--- a/src/main/webapp/modules/trialBalance/d.html
+++ b/src/main/webapp/modules/trialBalance/d.html
@@ -23,7 +23,7 @@
 	<thead>
 	<tr>
 		<th class="text-center" colspan="6">
-			<small>{{tbg.type}}</small>
+			<small>{{tbg.type | capitalizeFilter}}</small>
 		</th>
 	</tr>	
 	<tr>
