--- a/src/main/webapp/home-d-employee.html
+++ b/src/main/webapp/home-d-employee.html
@@ -7,11 +7,13 @@
 
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" >
 <link rel="stylesheet" href="assets/fontawesome/css/font-awesome.min.css">
+<!-- 
 <link rel="stylesheet" href="modules/wydNotify/wydNotifyByBootstrap.css">
-<link rel="stylesheet" href="assets/ui-select/selectize.bootstrap3.css" />
+-->
+<link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"/>
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
 <link rel="stylesheet" href="assets/angular-block-ui/angular-block-ui.min.css"/>
-<link rel="stylesheet" href="assets/angular-aside/css/angular-aside.min.css" />
+<link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
 <link rel="stylesheet" href="assets/home.css" />
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -95,8 +97,6 @@
 	</nav>
 </div>
 
-<wyd-notify-by-bootstrap-directive></wyd-notify-by-bootstrap-directive>
-
 <section class="container-fluid">
 	<div class="container" x-ng-view></div>
 </section>
@@ -104,6 +104,9 @@
 <div id="footer">
 	<x-footer-navigator-directive></x-footer-navigator-directive>
 </div>
+
+<wyd-notify-by-bootstrap-directive></wyd-notify-by-bootstrap-directive>
+<div data-panels="true"></div>
 
 <script type="text/javascript"
 	src="assets/lodash.min.js"></script>
@@ -124,6 +127,8 @@
 <script type="text/javascript" 
 	src="assets/ngStorage.min.js"></script>
 <script type="text/javascript" 
+	src="assets/ngNotify/ng-notify.min.js"></script>
+<script type="text/javascript" 
 	src="assets/ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
 <script type="text/javascript"
 	src='assets/ui-select/select.min.js'></script>
@@ -134,10 +139,13 @@
 <script type="text/javascript"  
 	src="assets/angular-block-ui/angular-block-ui.min.js"></script>
 <script type="text/javascript" 
-	src="assets/angular-aside/js/angular-aside.min.js"></script>
+	src="assets/angular-panels/angular.panels.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
+<!-- 
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByBootstrap.js"></script>
+-->
+<script type="text/javascript" src="modules/wydNotify/wydNotifyByNgNotify.js"></script>
 
 <script type="text/javascript" src="modules/session/sessionService.js"></script>
 
