--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -11,8 +11,8 @@
 <link rel="stylesheet" href="modules/wydNotify/wydNotifyByBootstrap.css">
 -->
 <link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"></script>
-<link rel="stylesheet" href="assets/ui-select/selectize.bootstrap3.css" />
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
+<link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
 <link rel="stylesheet" href="assets/index.css" />
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -24,57 +24,28 @@
 </head>
 <body x-ng-clock>
 
-<wyd-notify-by-bootstrap-directive></wyd-notify-by-bootstrap-directive>
-
-<div id="header">
-	<nav class="navbar navbar-default navbar-fixed-top" x-role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" 
-					x-toggle="collapse" x-target=".navbar-inverse-collapse"">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="index-d.html">Watch Your Sales</a>
-			</div>
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
-					<li>
-						<a x-ng-href="#{{homeView}}"><i class="fa fa-home"></i> Home</a>
-					</li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right" x-ng-hide="isLoggedIn">
-					<li>
-						<a href="#/signin"><i class="fa fa-sign-in"></i> Login</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-		
-		<div id="breadCrumb" class="container-fluid">
-
-			<div class="container">
-				<strong><small>{{viewName | capitalizeFilter}}</small></strong>
-			</div>
-
-		</div>
-
-	</nav>
-</div>
-
 <section class="container-fluid">
-	<div class="container" x-ng-view></div>
+	<div cllass="container">
+		<br/>
+		<div class="text-center">
+			<button class="btn btn-success" x-ng-click="success()">Success</button>
+			<button class="btn btn-info"    x-ng-click="info()">Info</button>
+			<button class="btn btn-warning" x-ng-click="warning()">Warning</button>
+			<button class="btn btn-danger"  x-ng-click="error()">Error</button>		
+		</div>
+		<br/>
+		<div class="text-center">
+			<button class="btn btn-default" x-ng-click="openPanel('lp')">Left Panel</button>
+			<button class="btn btn-default" x-ng-click="openPanel('rp')">Right Panel</button>
+			<button class="btn btn-default" x-ng-click="openPanel('tp')">Top Panel</button>
+			<button class="btn btn-default" x-ng-click="openPanel('bp')">Bottom Panel</button>
+		</div>
+	</div>
 </section>
 
-<div id="footer">
-	<x-footer-navigator-directive></x-footer-navigator-directive>
-</div>
-
-<div x-panels="true" x-panel-left-template="modules/zgeneral/sideBarLeft.html">
-</div>
-
+<wyd-notify-by-bootstrap-directive></wyd-notify-by-bootstrap-directive>
+<div data-panels="true"></div>
+    
 <script type="text/javascript"
 	src="assets/lodash.min.js"></script>
 <script type="text/javascript" 
@@ -105,6 +76,8 @@
 	src="assets/inputmask/green.inputmask4angular.js"></script>
 <script type="text/javascript"  
 	src="assets/angular-block-ui/angular-block-ui.min.js"></script>
+<script type="text/javascript" 
+	src="assets/angular-panels/angular.panels.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
 <!-- 
@@ -112,13 +85,7 @@
 -->
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByNgNotify.js"></script>
 
-<script type="text/javascript" src="modules/home/indexController.js"></script>
-
-<script type="text/javascript" src="modules/session/loginController.js"></script>
-
-<script type="text/javascript" src="modules/common.js"></script>
-<script type="text/javascript" src="modules/directives.js"></script>
-<script type="text/javascript" src="modules/index-d.js"></script>
+<script type="text/javascript" src="modules/test.js"></script>
 
 </body>
 </html>
