updating latest changes...

--- a/src/main/webapp/modules/counter/d.html
+++ b/src/main/webapp/modules/counter/d.html
@@ -7,12 +7,12 @@
 <div class="col-md-9">
 
 <div class="row">
-	<div class="col-md-10">
+	<div class="col-md-12">
 		<div>
 			<strong><small>Customer</small></strong> : 
 			<a x-tooltip="View Customer"
 				x-ng-disabled="receipt.id != 0"
-				x-ng-href="#/customers/customer/{{receipt.customer.id}}">
+				x-ng-href="#{{receipt.customerUrl}}">
 				{{receipt.customer.firstName}} {{receipt.customer.lastName}}
 			</a>
 			
@@ -25,14 +25,17 @@
       			<ul class="dropdown-menu" role="menu">
         			<li x-ng-class="{true:'disabled', false:''}[receipt.customer.id === 4]">
         				<a x-ng-href="#/customers/customer/{{receipt.customer.id}}/edit">
-        					<i class="fa fa-edit"></i> Edit Customer 
+        					<i class="fa fa-edit"></i> &nbsp;Edit Customer 
         				</a>
         			</li>
         			<li>
-        				<a href="#/customers/customer"><i class="fa fa-plus"></i> New Customer </a>
+        				<a href="#/customers/customer"><i class="fa fa-plus"></i> &nbsp;New Customer </a>
         			</li>
         			<li>
-        				<a href="#/customers/search"><i class="fa fa-search"></i> Search Customer </a>
+        				<a href="#/customers/search"><i class="fa fa-search"></i> &nbsp;Search Customer </a>
+        			</li>
+        			<li>
+        				<a href="#/dealers/search"><i class="fa fa-search"></i> &nbsp;Search Dealer </a>
         			</li>
         		</ul>
     		</div>
@@ -42,18 +45,49 @@
  			: {{receipt.customer.cashAccount.handStock | number : 2}}
 		</div>
 	</div>	
-	<div class="col-md-2">
-		<button class="btn btn-default pull-right"
-			x-tooltip="Add New Transaction"
-			x-ng-click="newTransaction()">
-			<i class="fa fa-plus"></i> New
-		</button>
-	</div>
 </div>
 
 <div class="panel" data-ng-class="{true : 'panel-danger', false : 'panel-default'}[receipt.transactions[receipt.curTranIndex].message != '']">
 	<div class="panel-heading">
+		<div class="pull-left">
+		<button class="btn btn-default btn-sm"
+			x-tooltip="Add New Transaction"
+			x-ng-click="newTransaction()">
+			<i class="fa fa-plus"></i> New
+		</button>
+		</div>
 		&nbsp;{{receipt.transactions[receipt.curTranIndex].message}}
+		
+			<div class="btn-group pull-right" x-dropdown>
+      			<button type="button" class="btn btn-default btn-sm dropdown-toggle"
+      				x-ng-disabled="receipt.id != 0"
+      				x-dropdown-toggle>
+      				&nbsp;<i class="fa fa-ellipsis-v"></i>&nbsp; 
+      			</button>
+      			<ul class="dropdown-menu" role="menu">
+        			<li>
+        				<a href="" x-ng-click="removeAllTransactions()">
+        					<i class="fa fa-times"></i> &nbsp;Delete All 
+        				</a>
+        			</li>
+        			<li>
+        				<a href="#/recentTransactions"> 
+        					<i class="fa fa-refresh"></i> &nbsp;Recent Transactions
+        				</a>
+        			</li>
+        			<li>
+        				<a href="#/recentOrders"> 
+        					<i class="fa fa-refresh"></i> &nbsp;Recent Orders
+        				</a>
+        			</li>
+        			<li>
+        				<a href="#/recentDrafts">
+        					<i class="fa fa-refresh"></i> &nbsp;Recent Drafts
+        				</a>
+        			</li>
+        		</ul>
+    		</div>
+		
 	</div>
 	<table class="table table-condensed table-bordered">
 	<thead>
@@ -181,20 +215,20 @@
 
 <div class="row">
 	<div class="col-md-2">	
-		<button class="btn btn-danger" 
+		<button class="btn btn-default" 
 			x-ng-disabled="receipt.id != 0"
-			x-ng-click="removeAllTransactions()">
-			<i class="fa fa-times"></i> Delete All
+			x-ng-click="saveReceiptAsQuotation()">
+			<i class="fa fa-print"></i> Print Quotation
 		</button>
 	</div>
 	<div class="col-md-2">			   							
 		<button class="btn btn-warning" 
 			x-ng-disabled="receipt.id != 0"
-			x-ng-click="saveReceiptAsQuotation()">
-			Quotation
+			x-ng-click="saveReceiptAsDraft()">
+			<i class="fa fa-save"></i> Save As Draft
 		</button>
 	</div>
-	<div class="col-md-2 text-right">	
+	<div class="col-md-2 text-center">	
 		<button class="btn btn-default" 
 			x-ng-disabled="receipt.id == 0"
 			x-ng-click="printReceipt()">
@@ -219,19 +253,6 @@
 </div>
 
 <div class="row">&nbsp;</div>
-
-<!-- 	
-<div class="row">
-	<div class="col-md-6">
-		<pre>{{receipt     | json}}</pre>
-	</div>
-	<div class="col-md-6">
-		<pre>{{tranReceipt | json}}</pre>
-	</div>
-</div>
-<br/>
-<br/>
--->		
 
 </div>
 	
