updating latest changes...

--- a/src/main/webapp/modules/ledger/d.html
+++ b/src/main/webapp/modules/ledger/d.html
@@ -106,7 +106,7 @@
 	</tr>
 	</thead>
 	<tbody>
-	<tr x-ng-repeat="item in recentTrans">
+	<tr x-ng-repeat="item in recentTrans | orderBy : '-id'">
 		<td class="text-right" width="40">
 			{{$index+1}}
 		</td>
