updating latest changes...

--- a/src/main/webapp/home-d-dealer.html
+++ b/src/main/webapp/home-d-dealer.html
@@ -31,7 +31,7 @@
 </style>
 
 </head>
-<body x-ng-clock>
+<body x-ng-clock x-presence>
 
 <div id="header">
 	<nav class="navbar navbar-default navbar-fixed-top" x-role="navigation">
@@ -124,9 +124,15 @@
 	src="assets/inputmask/green.inputmask4angular.js"></script>
 <script type="text/javascript"  
 	src="assets/angular-block-ui/angular-block-ui.min.js"></script>
+<script type="text/javascript" 
+	src="assets/angular-presence/angular-presence.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
+<!-- 
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByBootstrap.js"></script>
+-->
+<script type="text/javascript" src="modules/wydNotify/wydNotifyByNgNotify.js"></script>
+<script type="text/javascript" src="modules/angularPresence/angularPresence.js"></script>
 
 <script type="text/javascript" src="modules/session/sessionService.js"></script>
 
