--- a/src/main/webapp/test.html
+++ b/src/main/webapp/test.html
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="assets/ngNotify/ng-notify.min.css"></script>
 <link rel="stylesheet" href="assets/ui-select/select.min.css" />
 <link rel="stylesheet" href="assets/angular-panels/angular.panels.css">
+
 <link rel="stylesheet" href="assets/index.css" />
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -22,10 +23,13 @@
 <![endif]-->
 
 </head>
-<body x-ng-clock>
+<body x-ng-clock x-presence>
 
 <section class="container-fluid">
 	<div cllass="container">
+		<div class="text-center">
+			Presence State : {{presenceStates.getCurrent().text}}
+		</div>
 		<br/>
 		<div class="text-center">
 			<button class="btn btn-success" x-ng-click="success()">Success</button>
@@ -39,6 +43,18 @@
 			<button class="btn btn-default" x-ng-click="openPanel('rp')">Right Panel</button>
 			<button class="btn btn-default" x-ng-click="openPanel('tp')">Top Panel</button>
 			<button class="btn btn-default" x-ng-click="openPanel('bp')">Bottom Panel</button>
+		</div>
+		<br/>
+		<div class="text-center">
+			<button class="btn btn-default" 
+				x-ng-click="newReceipt()">
+				New Receipt
+			</button>
+			<button class="btn btn-primary" 
+				x-ng-disabled="receipt.id != 0"
+				x-ng-click="saveReceipt()">
+				Save Receipt
+			</button>
 		</div>
 	</div>
 </section>
@@ -78,12 +94,16 @@
 	src="assets/angular-block-ui/angular-block-ui.min.js"></script>
 <script type="text/javascript" 
 	src="assets/angular-panels/angular.panels.js"></script>
+<script type="text/javascript" 
+	src="assets/angular-presence/angular-presence.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
 <!-- 
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByBootstrap.js"></script>
 -->
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByNgNotify.js"></script>
+
+<script type="text/javascript" src="modules/angularPresence/angularPresence.js"></script>
 
 <script type="text/javascript" src="modules/test.js"></script>
 
