updating latest changes...

--- a/src/main/webapp/modules/session/sessionResponse.html
+++ b/src/main/webapp/modules/session/sessionResponse.html
@@ -1,7 +1,7 @@
 <div>
 <br/><br/><br/><br/>
 
-<h1 class="text-center text-danger">Session timeout....</h1>
+<h1 class="text-center text-danger">{{message}}</h1>
 <br/><br/>
 <p class="text-center">Please re-login from <strong><a href="index-d.html#/signin">here</a></strong></p>
 
