--- a/src/main/webapp/home-d-customer.html
+++ b/src/main/webapp/home-d-customer.html
@@ -123,6 +123,8 @@
 <script type="text/javascript"  
 	src="assets/angular-block-ui/angular-block-ui.min.js"></script>
 <script type="text/javascript" 
+	src="assets/angular-panels/angular.panels.js"></script>
+<script type="text/javascript" 
 	src="assets/angular-presence/angular-presence.min.js"></script>
 
 <script type="text/javascript" src="modules/init.js"></script>
@@ -130,7 +132,7 @@
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByBootstrap.js"></script>
 -->
 <script type="text/javascript" src="modules/wydNotify/wydNotifyByNgNotify.js"></script>
-<script type="text/javascript" src="modules/angularPresence/angularPresence.js"></script>
+<script type="text/javascript" src="modules/session/angularPresence.js"></script>
 
 <script type="text/javascript" src="modules/session/sessionService.js"></script>
 
