--- a/src/main/webapp/modules/customerOrder/d.html
+++ b/src/main/webapp/modules/customerOrder/d.html
@@ -1,4 +1,9 @@
 <div class="panel panel-default">
+	<div class="panel-body">
+		&nbsp;
+	</div>
+</div>
+<div class="panel panel-default">
 	<div class="panel-heading text-center">
 		<span class="pull-left">
 			<button	class="btn btn-default"	x-ng-disabled="items.length == 0"
