updating latest changes...

--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -191,8 +191,8 @@
 
 <script type="text/javascript" src="modules/customer/customerController.js"></script>
 
+<script type="text/javascript" src="modules/customerOrder/customerOrderService.js"></script>
 <script type="text/javascript" src="modules/customerOrder/customerOrderController.js"></script>
-
 <script type="text/javascript" src="modules/customerTran/customerTranController.js"></script>
 
 <script type="text/javascript" src="modules/counter/counterService.js"></script>
