--- a/src/main/webapp/modules/customer/d-search.html
+++ b/src/main/webapp/modules/customer/d-search.html
@@ -23,7 +23,7 @@
 	</tr>
 	</thead>
 	<tbody>
-	<tr x-ng-repeat="item in items">
+	<tr x-ng-repeat="item in items | filter : {id != 0}">
 		<td class="text-right" width="40">
 			{{$index+1}}
 		</td>
