--- a/src/main/webapp/modules/counter/d.html
+++ b/src/main/webapp/modules/counter/d.html
@@ -6,255 +6,209 @@
 
 	<div class="col-md-9">
 
-<div class="row">
-	<div class="col-md-12">
-		<div>
-			<strong><small>{{receipt.forUserLabel}}</small></strong> : 
-			<a x-ng-disabled="receipt.id != 0" x-ng-href="#{{receipt.forUserUrl}}">
-				{{receipt.forUser.firstName}} {{receipt.forUser.lastName}}
-			</a>
-			<div class="btn-group pull-right" x-dropdown>
-      			<button type="button" class="btn btn-default dropdown-toggle"
-      				x-ng-disabled="receipt.id != 0"
-      				x-dropdown-toggle>
-      				<i class="fa fa-ellipsis-v"></i> More 
-      			</button>
-      			<ul class="dropdown-menu" role="menu">
-        			<li x-ng-class="{true:'disabled', false:''}[receipt.customer.id === 4]">
-        				<a x-ng-href="#/customers/customer/{{receipt.customer.id}}/edit">
-        					<i class="fa fa-edit"></i> &nbsp;Edit Customer 
-        				</a>
-        			</li>
-        			<li>
-        				<a href="#/customers/customer"><i class="fa fa-plus"></i> &nbsp;New Customer </a>
-        			</li>
-        			<li>
-        				<a href="#/customers/search"><i class="fa fa-search"></i> &nbsp;Search Customer </a>
-        			</li>
-        			<li>
-        				<a href="#/dealers/search"><i class="fa fa-search"></i> &nbsp;Search Dealer </a>
-        			</li>
-        		</ul>
-    		</div>
-    	</div>				
-		<div>			
- 			<strong><small>Balance&nbsp;&nbsp;&nbsp;</small></strong> 
- 			: {{receipt.forUser.cashAccount.handStock | number : 2}}
+		<div class="row">
+			<div class="col-md-12">
+				<div>
+					<strong><small>{{receipt.forUserLabel}}</small></strong> : 
+					<a x-ng-disabled="receipt.id != 0" x-ng-href="#{{receipt.forUserUrl}}">
+						{{receipt.forUser.firstName}} {{receipt.forUser.lastName}}
+					</a>
+					<div class="btn-group pull-right" x-dropdown>
+		      			<button type="button" class="btn btn-default dropdown-toggle"
+		      				x-ng-disabled="receipt.id != 0"	x-dropdown-toggle>
+		      				<i class="fa fa-ellipsis-v"></i> More 
+		      			</button>
+		      			<ul class="dropdown-menu" role="menu">
+		        			<li x-ng-class="{true:'disabled', false:''}[receipt.forUser.firstName === 'Guest']">
+		        				<a x-ng-href="#{{receipt.forUserUrl}}/edit">
+		        					<i class="fa fa-edit"></i> &nbsp;Edit {{receipt.forUserLabel}} 
+		        				</a>
+		        			</li>
+		        			<li class="divider"></li>
+		        			<li>
+		        				<a href="#/customers/customer"><i class="fa fa-plus"></i> &nbsp;New Customer </a>
+		        			</li>
+		        			<li>
+		        				<a href="#/customers/search"><i class="fa fa-search"></i> &nbsp;Search Customer </a>
+		        			</li>
+		        			<li class="divider"></li>
+		        			<li>
+		        				<a href="#/dealers/dealer"><i class="fa fa-plus"></i> &nbsp;New Dealer </a>
+		        			</li>
+		        			<li>
+		        				<a href="#/dealers/search"><i class="fa fa-search"></i> &nbsp;Search Dealer </a>
+		        			</li>
+		        			<li class="divider"></li>
+		        			<li>
+		        				<a href="" x-ng-click="saveReceiptAsOrder()"><i class="fa fa-save"></i> &nbsp;Save As Order </a>
+		        			</li>
+		        		</ul>
+		    		</div>
+		    	</div>				
+				<div>			
+		 			<strong><small>Balance&nbsp;&nbsp;&nbsp;</small></strong> 
+		 			: {{receipt.forUser.cashAccount.handStock | number : 2}}
+				</div>
+			</div>	
 		</div>
-	</div>	
-</div>
 
-<div class="panel" x-ng-class="{true : 'panel-danger', false : 'panel-default'}[receipt.curTran.message != '']">
-	<div class="panel-heading">
-		<div class="pull-left">
-			<div class="btn-group" x-dropdown>
-	   			<button type="button" class="btn btn-default btn-sm dropdown-toggle"
-	   				x-ng-disabled="receipt.id != 0"
-	   				x-dropdown-toggle>
-	   				&nbsp;<i class="fa fa-ellipsis-v"></i>&nbsp; 
-	   			</button>
-	   			<ul class="dropdown-menu" role="menu">
-	       			<li>
-	       				<a href="" x-ng-click="removeAllTransactions()">
-	       					<i class="fa fa-times"></i> &nbsp;Delete All 
-	       				</a>
-	       			</li>
-	       			<li>
-	       				<a href="#/recentTransactions"> 
-	       					<i class="fa fa-refresh"></i> &nbsp;Recent Transactions
-	       				</a>
-	       			</li>
-	       			<li>
-	       				<a href="#/recentOrders"> 
-	       					<i class="fa fa-refresh"></i> &nbsp;Recent Orders
-	       				</a>
-	       			</li>
-	       			<li>
-	       				<a href="#/recentDrafts">
-	       					<i class="fa fa-refresh"></i> &nbsp;Recent Drafts
-	       				</a>
-	       			</li>
-	       		</ul>
-	   		</div>
-	   		<span>
-				&nbsp;&nbsp;Receipt Id : <strong>{{receipt.id}}</strong>
-			</span>
+		<div class="panel" x-ng-class="{true : 'panel-danger', false : 'panel-default'}[receipt.curTran.message != '']">
+			<div class="panel-heading">
+				<div class="pull-left">
+					<button class="btn btn-default btn-sm"
+						x-tooltip="Add New Transaction"
+						x-ng-click="newTransaction()">
+						<i class="fa fa-plus"></i> New&nbsp;&nbsp;
+					</button>
+			   		<span>
+						&nbsp;&nbsp;Receipt Id : <strong>{{receipt.id}}</strong>
+					</span>
+				</div>
+				&nbsp;{{receipt.trans[receipt.curTranIndex].message}}
+				<div class="pull-right">
+					<button class="btn btn-default btn-sm" 
+						x-ng-disabled="receipt.id == 0"
+						x-ng-click="printReceipt()">
+						<i class="fa fa-print"></i>
+					</button>
+		   		</div>
+			</div>
+			<table class="table table-condensed table-bordered">
+			<thead>
+			<tr>
+				<th class="text-right" width="30">#</th>
+			   	<th class="text-center"><small>Product</small></th>
+			   	<th class="text-center"><small>We</small></th>
+			   	<th class="text-center"><small>Quantity</small></th>
+			   	<th class="text-center"><small>Rate</small></th>
+			   	<th class="text-center"><small>Amount</small></th>
+			   	<th class="text-center" width="40">
+			   		<button type="button" class="btn btn-danger btn-xs" 
+			   			x-ng-disabled="receipt.id != 0"
+			   			x-ng-click="removeAllTransactions()">
+			       		<i class="fa fa-times"></i>  
+			       	</button>
+			   	</th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr x-ng-repeat="tran in receipt.trans"
+				x-ng-click="onTransactionSelect($index)"
+			   	x-ng-class="{info : $index === receipt.curTranIndex}">
+				<td width="30" class="text-right">{{$index+1}}</td>
+				<td width="300">
+					<select class="form-control input-sm" x-ng-model="tran.item"
+						x-ng-disabled="receipt.id != 0"
+						x-ng-change="onTransactionItem(tran)"
+						x-ng-options="stock.product.code + ' - ' + stock.product.name for stock in items | filter : { type : 'product'}">
+			    	</select>
+				</td>
+				<td width="80" class="text-center">
+					<select class="form-control input-sm" x-ng-model="tran.type"
+						x-ng-disabled="receipt.id != 0"
+						x-ng-change="onTransactionType(tran)">
+			      		<option value="buy">Buy</option>
+			      		<option value="sell">Sell</option>
+			    	</select>
+				</td>
+				<td width="150">
+					<input type="text" class="form-control input-sm"
+						x-ng-model="tran.unit"
+						x-ng-disabled="receipt.id != 0"
+						x-ng-change="onTransactionUnit(tran)"
+						x-input-mask="'decimal'"
+						mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true }"/> 
+				</td>
+				<td width="100">
+					<input type="text" class="form-control input-sm"
+						x-ng-model="tran.rate"
+						x-ng-disabled="receipt.id != 0"
+						x-ng-change="onTransactionRate(tran)"
+						x-input-mask="'decimal'"
+						mask-option="{ allowMinus : false, 'digits' : 5, 'groupSeparator' : ',', 'autoGroup': true }"/>
+				</td>
+				<td class="text-right">
+					{{tran.amount | number : 2}}
+				</td>
+				<td width="40" class="text-center">
+					<button class="btn btn-danger btn-xs"
+						x-ng-disabled="receipt.id != 0"
+						x-ng-click="removeTransaction($index)">		
+						<i class="fa fa-times"></i>
+					</button>
+				</td>
+			</tr>
+			</tbody>
+			<tfoot>
+			<tr>
+				<td colspan="5" class="text-right">
+					{{receipt.totalAmountLabel}} 
+				</td>
+				<td class="text-right">
+					{{receipt.totalAmount | number : 2}}
+				</td>
+				<td>&nbsp;</td>
+			</tr>		
+			<tr>
+				<td colspan="5" class="text-right">
+					{{receipt.customerAmountLabel}}  
+				</td>
+				<td class="text-right">
+					<input type="text" class="form-control input-sm" 
+						x-ng-model="receipt.customerAmount" 
+						x-ng-disabled="receipt.id != 0"
+						x-ng-change="onCustomerAmount()"
+						x-input-mask="'decimal'"
+						mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true}"/>
+				</td>
+				<td>&nbsp;</td>
+			</tr>
+			<tr>
+				<td colspan="5" class="text-right">
+					{{receipt.balanceAmountLabel}} Balance
+				</td>
+				<td class="text-right">
+					{{receipt.balanceAmount | number : 2}}
+				</td>
+				<td>&nbsp;</td>
+			</tr>
+			</tfoot>
+			</table>
 		</div>
-		&nbsp;{{receipt.trans[receipt.curTranIndex].message}}
-		<div class="pull-right">
-			<button class="btn btn-default btn-sm"
-				x-tooltip="Add New Transaction"
-				x-ng-click="newTransaction()">
-				<i class="fa fa-plus"></i> New&nbsp;&nbsp;
-			</button>
-   		</div>
-	</div>
-	<table class="table table-condensed table-bordered">
-	<thead>
-	<tr>
-		<th class="text-right" width="30">#</th>
-	   	<th class="text-center"><small>Product</small></th>
-	   	<th class="text-center"><small>We</small></th>
-	   	<th class="text-center"><small>Quantity</small></th>
-	   	<th class="text-center"><small>Rate</small></th>
-	   	<th class="text-center"><small>Amount</small></th>
-	   	<th class="text-center" width="40">&nbsp;</th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr x-ng-repeat="tran in receipt.trans"
-		x-ng-click="onTransactionSelect($index)"
-	   	x-ng-class="{info : $index === receipt.curTranIndex}">
-		<td width="30" class="text-right">{{$index+1}}</td>
-		<td width="300">
-			<select class="form-control input-sm" x-ng-model="tran.item"
-				x-ng-disabled="receipt.id != 0"
-				x-ng-change="onTransactionItem(tran)"
-				x-ng-options="stock.product.code + ' - ' + stock.product.name for stock in items | filter : { type : 'product'}">
-	    	</select>
-		</td>
-		<td width="80" class="text-center">
-			<select class="form-control input-sm" x-ng-model="tran.type"
-				x-ng-disabled="receipt.id != 0"
-				x-ng-change="onTransactionType(tran)">
-	      		<option value="buy">Buy</option>
-	      		<option value="sell">Sell</option>
-	    	</select>
-		</td>
-		<td width="150">
-			<input type="text" class="form-control input-sm"
-				x-ng-model="tran.unit"
-				x-ng-disabled="receipt.id != 0"
-				x-ng-change="onTransactionUnit(tran)"
-				x-input-mask="'decimal'"
-				mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true }"/> 
-		</td>
-		<td width="100">
-			<input type="text" class="form-control input-sm"
-				x-ng-model="tran.rate"
-				x-ng-disabled="receipt.id != 0"
-				x-ng-change="onTransactionRate(tran)"
-				x-input-mask="'decimal'"
-				mask-option="{ allowMinus : false, 'digits' : 5, 'groupSeparator' : ',', 'autoGroup': true }"/>
-		</td>
-		<td class="text-right">
-			{{tran.amount | number : 2}}
-		</td>
-		<td width="40" class="text-center">
-			<button class="btn btn-sm btn-danger"
-				x-ng-disabled="receipt.id != 0"
-				x-ng-click="removeTransaction($index)">		
-				<i class="fa fa-times"></i>
-			</button>
-		</td>
-	</tr>
-	</tbody>
-	<tfoot>
-	<tr>
-		<td colspan="5" class="text-right">
-			{{receipt.totalAmountLabel}} 
-		</td>
-		<td class="text-right">
-			{{receipt.totalAmount | number : 2}}
-		</td>
-		<td>&nbsp;</td>
-	</tr>		
-	<tr>
-		<td colspan="5" class="text-right">
-			{{receipt.customerAmountLabel}}  
-		</td>
-		<td class="text-right">
-			<input type="text" class="form-control input-sm" 
-				x-ng-model="receipt.customerAmount" 
-				x-ng-disabled="receipt.id != 0"
-				x-ng-change="onCustomerAmount()"
-				x-input-mask="'decimal'"
-				mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true}"/>
-		</td>
-		<td>&nbsp;</td>
-	</tr>
-	<tr>
-		<td colspan="5" class="text-right">
-			{{receipt.balanceAmountLabel}} Balance
-		</td>
-		<td class="text-right">
-			{{receipt.balanceAmount | number : 2}}
-		</td>
-		<td>&nbsp;</td>
-	</tr>
-	</tfoot>
-	</table>
-</div>
 
-<div class="row">
-	<div class="col-md-3 text-right">
-		<strong><small>Round Off Amount</small></strong>
+		<div class="row">
+			<div class="col-md-2 text-right">
+				<strong><small>Round Off Amount</small></strong>
+			</div>
+			<div class="col-md-2">
+				<input type="text" class="form-control input-sm" 
+					x-ng-model="receipt.roundOffAmount" 
+					x-ng-disabled="receipt.id != 0"
+					x-ng-change="onRoundOffAmount()"
+					x-input-mask="'decimal'"
+					mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true}"/>
+			</div>
+			<div class="col-md-2 text-right">
+				<strong><small>Revert Amount</small></strong>
+			</div>
+			<div class="col-md-2">
+				<input type="text" class="form-control input-sm" 
+					x-ng-model="receipt.revertAmount" 
+					x-ng-disabled="receipt.id != 0"
+					x-ng-change="onRevertAmount()"
+					x-input-mask="'decimal'"
+					mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true}"/>
+			</div>
+			<div class="col-md-1">&nbsp;</div>
+			<div class="col-md-3">
+				<button class="btn btn-primary btn-block" 
+					x-ng-disabled="receipt.id != 0"
+					x-ng-click="saveReceiptAsTransaction()">
+					<i class="fa fa-save"></i> Save As Transaction
+				</button>
+			</div>
+		</div>
 	</div>
-	<div class="col-md-3">
-		<input type="text" class="form-control input-sm" 
-			x-ng-model="receipt.roundOffAmount" 
-			x-ng-disabled="receipt.id != 0"
-			x-ng-change="onRoundOffAmount()"
-			x-input-mask="'decimal'"
-			mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true}"/>
-	</div>
-	<div class="col-md-3 text-right">
-		<strong><small>Revert Amount</small></strong>
-	</div>
-	<div class="col-md-3">
-		<input type="text" class="form-control input-sm" 
-			x-ng-model="receipt.revertAmount" 
-			x-ng-disabled="receipt.id != 0"
-			x-ng-change="onRevertAmount()"
-			x-input-mask="'decimal'"
-			mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true}"/>
-	</div>
-</div>
-	
-<div class="row">&nbsp;</div>
-
-<div class="row">
-	<div class="col-md-2">	
-		<button class="btn btn-default" 
-			x-ng-disabled="receipt.id != 0"
-			x-ng-click="saveReceiptAsQuotation()">
-			<i class="fa fa-print"></i> Print Quotation
-		</button>
-	</div>
-	<div class="col-md-2">			   							
-		<button class="btn btn-warning" 
-			x-ng-disabled="receipt.id != 0"
-			x-ng-click="saveReceiptAsDraft()">
-			<i class="fa fa-save"></i> Save As Draft
-		</button>
-	</div>
-	<div class="col-md-2 text-center">	
-		<button class="btn btn-default" 
-			x-ng-disabled="receipt.id == 0"
-			x-ng-click="printReceipt()">
-			<i class="fa fa-print"></i> Re-Print Receipt
-		</button>
-	</div>
-	<div class="col-md-3 text-right">
-		<button class="btn btn-primary" 
-			x-ng-disabled="receipt.id != 0"
-			x-ng-click="saveReceiptAsOrder()">
-			<i class="fa fa-save"></i> Save As Order
-		</button>
-		
-	</div>
-	<div class="col-md-3 text-right">
-		<button class="btn btn-primary" 
-			x-ng-disabled="receipt.id != 0"
-			x-ng-click="saveReceiptAsTransaction()">
-			<i class="fa fa-save"></i> Save As Transaction
-		</button>
-	</div>
-</div>
-
-<div class="row">&nbsp;</div>
-
-</div>
 	
 </div>
 	
