--- a/src/main/webapp/modules/customerOrder/d-processCustomerOrder.html
+++ b/src/main/webapp/modules/customerOrder/d-processCustomerOrder.html
@@ -6,7 +6,7 @@
 	
 			<div>
 				<strong><small>Customer</small></strong> : 
-					{{receipt.forUser.firstName}} {{receipt.forUser.lastName}}
+				{{receipt.forUser.firstName}} {{receipt.forUser.lastName}}
 	    	</div>				
 			<div>			
 	 			<strong><small>Balance&nbsp;&nbsp;&nbsp;</small></strong> 
@@ -18,7 +18,14 @@
 					<div class="pull-left">
 						&nbsp;&nbsp;Receipt Id : <strong>{{receipt.id}}</strong>
 					</div>
-					&nbsp;{{receipt.trans[receipt.curTranIndex].message}}
+					&nbsp;{{receipt.curTran.message}}
+					<div class="pull-right">
+						<button class="btn btn-default btn-sm" 
+							x-ng-disabled="receipt.id == 0"
+							x-ng-click="printReceipt()">
+							<i class="fa fa-print"></i>
+						</button>
+			   		</div>
 				</div>
 				<table class="table table-condensed table-bordered">
 				<thead>
@@ -26,7 +33,8 @@
 					<th class="text-right" width="30">#</th>
 				   	<th class="text-center"><small>Product</small></th>
 				   	<th class="text-center"><small>We</small></th>
-				   	<th class="text-center"><small>Quantity</small></th>
+				   	<th class="text-center"><small>Sales Qty</small></th>
+				   	<th class="text-center"><small>Order Qty</small></th>
 				   	<th class="text-center"><small>Rate</small></th>
 				   	<th class="text-center"><small>Amount</small></th>
 				   	<th class="text-center" width="40">&nbsp;</th>
@@ -37,13 +45,13 @@
 					x-ng-click="onTranSelect($index)"
 				   	x-ng-class="{info : $index === receipt.curTranIndex}">
 					<td width="30" class="text-right">{{$index+1}}</td>
-					<td width="300">
+					<td>
 						{{tran.item.product.name}}
 					</td>
-					<td width="80" class="text-center">
+					<td width="60" class="text-center">
 						{{tran.type}}
 					</td>
-					<td width="150">
+					<td width="120">
 						<input type="text" class="form-control input-sm"
 							x-ng-model="tran.unit"
 							x-ng-disabled="receipt.id != 0"
@@ -51,14 +59,17 @@
 							x-input-mask="'decimal'"
 							mask-option="{ allowMinus : false, 'digits' : 2, 'groupSeparator' : ',', 'autoGroup': true }"/> 
 					</td>
-					<td class="text-right" width="100">
+					<td width="120" class="text-right">
+						{{tran.order.unit | number}}
+					</td>
+					<td  width="100" class="text-right">
 						{{tran.rate | number : 5}}
 					</td>
-					<td class="text-right">
+					<td width="140" class="text-right">
 						{{tran.amount | number : 2}}
 					</td>
 					<td width="40" class="text-center">
-						<button class="btn btn-sm btn-danger"
+						<button class="btn btn-danger btn-xs"
 							x-ng-disabled="receipt.id != 0"
 							x-ng-click="removeTran($index)">		
 							<i class="fa fa-times"></i>
@@ -68,7 +79,7 @@
 				</tbody>
 				<tfoot>
 				<tr>
-					<td colspan="5" class="text-right">
+					<td colspan="6" class="text-right">
 						{{receipt.totalAmountLabel}} 
 					</td>
 					<td class="text-right">
@@ -77,7 +88,7 @@
 					<td>&nbsp;</td>
 				</tr>		
 				<tr>
-					<td colspan="5" class="text-right">
+					<td colspan="6" class="text-right">
 						{{receipt.customerAmountLabel}}  
 					</td>
 					<td class="text-right">
@@ -91,7 +102,7 @@
 					<td>&nbsp;</td>
 				</tr>
 				<tr>
-					<td colspan="5" class="text-right">
+					<td colspan="6" class="text-right">
 						{{receipt.balanceAmountLabel}} Balance
 					</td>
 					<td class="text-right">
@@ -110,15 +121,11 @@
 						Back to Orders
 					</button>
 				</div>
-				<div class="col-md-4 text-center">	
-					<button class="btn btn-default" 
-						x-ng-disabled="receipt.id == 0"
-						x-ng-click="printReceipt()">
-						<i class="fa fa-print"></i> Re-Print Receipt
-					</button>
+				<div class="col-md-5 text-center">
+					&nbsp;	
 				</div>
-				<div class="col-md-4 text-right">
-					<button class="btn btn-primary" 
+				<div class="col-md-3">
+					<button class="btn btn-primary btn-block" 
 						x-ng-disabled="receipt.id != 0"
 						x-ng-click="saveReceiptAsTransaction()">
 						<i class="fa fa-save"></i> Save As Transaction
