updating latest changes...

--- a/src/main/webapp/modules/customerOrder/d-processCustomerOrder.html
+++ b/src/main/webapp/modules/customerOrder/d-processCustomerOrder.html
@@ -33,8 +33,8 @@
 					<th class="text-right" width="30">#</th>
 				   	<th class="text-center"><small>Product</small></th>
 				   	<th class="text-center"><small>We</small></th>
-				   	<th class="text-center"><small>Sales Qty</small></th>
-				   	<th class="text-center"><small>Order Qty</small></th>
+				   	<th class="text-center"><small>Quantity</small></th>
+				   	<th class="text-center"><small>Balance</small></th>
 				   	<th class="text-center"><small>Rate</small></th>
 				   	<th class="text-center"><small>Amount</small></th>
 				   	<th class="text-center" width="40">&nbsp;</th>
