updating latest changes...

--- a/src/main/webapp/home-d-manager.html
+++ b/src/main/webapp/home-d-manager.html
@@ -184,13 +184,11 @@
 <script type="text/javascript" src="modules/employee/employeeController.js"></script>
 
 <script type="text/javascript" src="modules/dealer/dealerController.js"></script>
-
+<script type="text/javascript" src="modules/dealerOrder/dealerOrderService.js"></script>
 <script type="text/javascript" src="modules/dealerOrder/dealerOrderController.js"></script>
-
 <script type="text/javascript" src="modules/dealerTran/dealerTranController.js"></script>
 
 <script type="text/javascript" src="modules/customer/customerController.js"></script>
-
 <script type="text/javascript" src="modules/customerOrder/customerOrderService.js"></script>
 <script type="text/javascript" src="modules/customerOrder/customerOrderController.js"></script>
 <script type="text/javascript" src="modules/customerTran/customerTranController.js"></script>
