--- a/src/main/webapp/modules/customerTran/d.html
+++ b/src/main/webapp/modules/customerTran/d.html
@@ -17,6 +17,7 @@
 	   	<th class="text-center" width="60"><small>Type</small></th>
 	   	<th class="text-center"><small>Unit</small></th>
 	   	<th class="text-center" width="60"><small>Rate</small></th>
+	   	<th class="text-center" width="60"><small>Average</small></th>
 	   	<th class="text-center"><small>Amount</small></th>
 	   	<th class="text-center" width="160"><small>Date</small></th>
 	   	<th class="text-center" width="40"><small>&nbsp;</small></th>
@@ -37,10 +38,13 @@
 			{{item.type}}
 		</td>
 		<td class="text-right">
-			{{item.unit | number : 5}}
+			{{item.unit | number : 2}}
 		</td>
 		<td class="text-right">
 			{{item.rate | number : 5}}
+		</td>
+		<td class="text-right">
+			{{item.averageRate | number : 5}}
 		</td>	
 		<td class="text-right">
 			{{item.unit * item.rate | number : 2}}
